<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.course_activities.ClassesInJavaActivity"
    tools:ignore="HardcodedText">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/classes_drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="vertical">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:text="Introduction"
                    android:textSize="25sp"
                    android:fontFamily="monospace"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:gravity="top"
                    android:text="Classes in Java"
                    android:textSize="20sp"
                    android:fontFamily="monospace"
                    android:textStyle="italic"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="monospace"
                    android:gravity="top"
                    android:text="Learn about Java classes, methods and properties"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="top"
                    android:text="@string/cover_following"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="top"
                    android:text="@string/class_pt"
                    android:textSize="11sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="top"
                    android:text="Defining a Java class"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="top"
                    android:text="@string/class_def"
                    android:textSize="14sp"/>

                <com.pddstudio.highlightjs.HighlightJsView
                    android:id="@+id/class_demo_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="top"
                    android:text="@string/class_explain"
                    android:textSize="14sp"/>



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="top"
                    android:text="Properties and methods"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="top"
                    android:text="@string/class_next"
                    android:textSize="14sp"/>

                <com.pddstudio.highlightjs.HighlightJsView
                    android:id="@+id/class_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="top"
                    android:text="@string/class_above"
                    android:textSize="14sp"/>

                <com.pddstudio.highlightjs.HighlightJsView
                    android:id="@+id/class_exer_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="top"
                    android:text="@string/class_exercise_explain"
                    android:textSize="14sp"/>


            </LinearLayout>
        </ScrollView>

        <!-- this the navigation view which draws and shows the navigation drawer -->
        <!-- include the menu created in the menu folder -->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/navigation_menu" />

    </androidx.drawerlayout.widget.DrawerLayout>

    <!-- this is the bottom navigation menu which will be shown at the bottom of the screen -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>